--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>home</title>
 </head>
 
@@ -39,7 +40,7 @@
     </nav>
 
         <div class="biodata">
-            <h3 class="text-5xl">Siapa saya</h3>
+            <h3 class="text-5xl ">Siapa saya</h3>
             <h1>Agus Setiawan</h1>
 
         </div>
