--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                 <button class="mt-[16px] p-[8px] cursor-pointer w-full text-[#5db1ff] border-none transform hover:bg-[#3765ff] hover:text-[#222] hover:rotate-[3deg]">Follow</button>
             </div>
         </div>
-
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat beatae assumenda nulla illo aspernatur cum magni, tempore quod, quas a aperiam inventore voluptate pariatur eligendi, ut quia dolorum natus hic.</h1>
         <footer class="mt-8 text-center">
             <p>&copy; Agus Setiawan | Jakarta</p>
         </footer>
