--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,19 @@
                 <button class="mt-[16px] p-[8px] cursor-pointer w-full text-[#5db1ff] border-none transform hover:bg-[#3765ff] hover:text-[#222] hover:rotate-[3deg]">Follow</button>
             </div>
             <div class="w-100 bg-[#222] text-center border border-red-700 h-[15rem] p-rem text-white">
-                <h2 class="mt-[1rem]">Youtube</h2>
+                <h2 class="mt-[1rem]">Facebook</h2>
                 <i class="fa-brands fa-youtube icons text-[24px]"></i>
                 <p class="text-red-400">Agus Setiawan <br> Youtube</p>
                 <button class="mt-[16px] p-[8px] cursor-pointer w-full text-[#5db1ff] border-none transform hover:bg-[#3765ff] hover:text-[#222] hover:rotate-[3deg]">Follow</button>
             </div>
             <div class="w-100 bg-[#222] text-center border border-red-700 h-[15rem] p-rem text-white">
-                <h2 class="mt-[1rem]">Youtube</h2>
+                <h2 class="mt-[1rem]">Instagram</h2>
                 <i class="fa-brands fa-youtube icons text-[24px]"></i>
                 <p class="text-red-400">Agus Setiawan <br> Youtube</p>
                 <button class="mt-[16px] p-[8px] cursor-pointer w-full text-[#5db1ff] border-none transform hover:bg-[#3765ff] hover:text-[#222] hover:rotate-[3deg]">Follow</button>
             </div>
             <div class="w-100 bg-[#222] text-center border border-red-700 h-[15rem] p-rem text-white">
-                <h2 class="mt-[1rem]">Youtube</h2>
+                <h2 class="mt-[1rem]">Whatsapp</h2>
                 <i class="fa-brands fa-youtube icons text-[24px]"></i>
                 <p class="text-red-400">Agus Setiawan <br> Youtube</p>
                 <button class="mt-[16px] p-[8px] cursor-pointer w-full text-[#5db1ff] border-none transform hover:bg-[#3765ff] hover:text-[#222] hover:rotate-[3deg]">Follow</button>
