--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             <button id="nav-toggle" class="lg:hidden"> <i class="fa-solid fa-bars"></i> </button>
 
             <ul class="absolute bg-blue-600 w-full right-0 top-10 p-3 transition-all duration-300 overflow-hidden transform scale-y-0 ease-in-out origin-top lg:relative lg:transform-none lg:w-auto lg:bg-none lg:flex lg:top-0 lg:gap-x-3" id="nav-menu">
-                <li><a href="#">Biodata</a></li>
+                <li><a href="biodata.html">Biodata</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="page3.html">Gallery</a></li>
                 <li><a href="contact.html">contact</a></li>
